--- a/Uarung.Web/Views/Auth/Login.cshtml
+++ b/Uarung.Web/Views/Auth/Login.cshtml
@@ -13,7 +13,7 @@
     <link href="~/css/style-login.css" rel="stylesheet"/>
 </head>
 <body class="text-center">
-<form class="form-signin" action="@Url.Action("Start", "Login")" method="post">
+<form class="form-signin" action="@Url.Action("Validate", "Auth")" method="post">
     <img class="mb-4 rounded-circle" src="https://picsum.photos/100" alt="" width="72" height="72">
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
 
