--- a/Uarung.Web/Views/Shared/_Layout.cshtml
+++ b/Uarung.Web/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <partial name="_ScriptHeader.cshtml"/>
 </head>
 <body>
-<nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
+<nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0">
     <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Company name</a>
     <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
@@ -35,7 +35,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="Home" asp-action="Product">
+                        <a class="nav-link" asp-controller="Product" asp-action="Index">
                             <span data-feather="shopping-cart"></span>
                             Products
                         </a>
