--- a/Uarung.Web/Views/Shared/_ScriptFooter.cshtml
+++ b/Uarung.Web/Views/Shared/_ScriptFooter.cshtml
@@ -1,4 +1,5 @@
-<script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
 <script>
     feather.replace()
