--- a/Uarung.Web/Views/Shared/Error.cshtml
+++ b/Uarung.Web/Views/Shared/Error.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ErrorViewModel
 @{
-    ViewData["Title"] = "Error";
+    ViewData[Constant.ViewDataKey.Title] = "Error";
 }
 
 <h1 class="text-danger">Error.</h1>
