update crud controller

--- a/Uarung.Web/Views/Home/Index.cshtml
+++ b/Uarung.Web/Views/Home/Index.cshtml
@@ -2,3 +2,6 @@
     ViewData[Constant.ViewDataKey.Title] = "Home Page";
 }
 
+<div class="d-flex mb-5">
+    <h3 class="mr-auto">Welcome @ViewData[Constant.ViewDataKey.UserName]</h3>
+</div>
