--- a/Uarung.Web/wwwroot/css/style-global.css
+++ b/Uarung.Web/wwwroot/css/style-global.css
@@ -11,6 +11,11 @@
 .lh-0 {
     line-height: 0
 }
+
+.lh-1 {
+    line-height: 1
+}
+
 /*
  * Sidebar
  */
@@ -20,8 +25,10 @@
     top: 0;
     bottom: 0;
     left: 0;
-    z-index: 100; /* Behind the navbar */
-    padding: 48px 0 0; /* Height of navbar */
+    z-index: 100;
+    /* Behind the navbar */
+    padding: 48px 0 0;
+    /* Height of navbar */
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 }
 
@@ -31,7 +38,7 @@
     height: calc(100vh - 48px);
     padding-top: .5rem;
     overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    overflow-y: auto;
 }
 
 @supports ((position: -webkit-sticky) or (position: sticky)) {
@@ -70,7 +77,8 @@
  */
 
 [role="main"] {
-    padding-top: 75px; /* Space for fixed navbar */
+    padding-top: 75px;
+    /* Space for fixed navbar */
 }
 
 /*
@@ -100,4 +108,41 @@
 .form-control-dark:focus {
     border-color: transparent;
     box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
+}
+
+.alert-error-message {
+    position: fixed;
+    bottom: 2rem;
+    right: 2rem;
+    max-width: 300px;
+    margin: 0;
+}
+
+.alert-error-message>span {
+    overflow: auto;
+}
+
+.btn-times-close {
+    min-width: 20px;
+    min-height: 20px;
+    padding: 0;
+    position: relative;
+}
+
+.btn-times-close>span {
+    position: absolute;
+    line-height: 0;
+    font-size: 21px;
+    top: 7px;
+    left: 0;
+    right: 0;
+}
+
+.btn-times-close.border-0>span {
+    top: 8px;
+}
+
+.swal-button {
+    background-color: #007bff;
+    border-color: #007bff;
 }
